<resources>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_sites">Sites</string>
    <string name="nav_report">Report</string>
    <string name="nav_account">Account</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_send_mail">Send Mail</string>
    <string name="nav_call">Call</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">

        <item>Home</item>
        <item>Laying</item>
        <item>Projects</item>
        <item>Purchase</item>
        <item>Account</item>
        <item>Staff</item>
        <item>Salary</item>
        <item>Expense</item>
        <item>Attendance</item>
        <item>Send Mail</item>
        <item>Labour Payment</item>
        <item>Logout</item>

    </string-array>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles2">

        <item>Home</item>
        <item>Boring</item>
        <item>Projects</item>
        <item>Purchase</item>
        <item>Account</item>
        <item>Staff</item>
        <item>Salary</item>
        <item>Expense</item>
        <item>Attendance</item>
        <item>Send Mail</item>
        <item>Labour Payment</item>
        <item>Logout</item>

    </string-array>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles3">

        <item>Home</item>
        <item>Manufacture</item>
        <item>Projects</item>
        <item>Purchase</item>
        <item>Account</item>
        <item>Staff</item>
        <item>Salary</item>
        <item>Expense</item>
        <item>Attendance</item>
        <item>Send Mail</item>
        <item>Labour Payment</item>
        <item>Logout</item>

    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="app_name">RajgrihiSingh</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter your userid</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rajgrihi Singh</string>
    <string name="nav_header_subtitle">rajgrihi.singh@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="date">Issue Date</string>
    <string name="vendor">Name of Vendor</string>
    <string name="classes"><![CDATA[Class & Type of DI Pipe]]></string>
    <string name="qty">Qty.Issued(In mtr)</string>
    <string name="select">Select</string>
    <string name="vr">Issue VR No.</string>
    <string name="i_sign">Issuer Signature</string>
    <string name="r_sign">Receiver Signature</string>
    <string name="zone">Zone</string>
    <string name="location">Location</string>
    <string name="node">Node to Node</string>
    <string name="external_dir">GetSignature</string>

    <string name="hint_sign">Get Signature</string>
    <string name="dialog_title">SIGN HERE</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_save">Save</string>
    <string name="v_sign">Vendor Signature</string>
    <string name="a_sign">Authorised Signature</string>
    <string name="laying">Laying(in mtr)</string>

    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Submit</string>
    <string name="special">Special Fitting Band Tee Etc.</string>
    <string name="sluice">Siuice Valve</string>
    <string name="start_reading">Start Reading</string>
    <string name="close_reading">Close Reading</string>
    <string name="total_hr">Total Hour Running In Work</string>
    <string name="jcb_use">TOTAL USE  (JCB)</string>
    <string name="skilled">Skilled</string>
    <string name="nonskilled">NonSkilled</string>
    <string name="enter_non_skilled">Enter non skilled</string>
    <string name="enter__skilled">Enter skilled</string>
    <string name="l_date">Laying Date</string>
    <string name="submit">SUBMIT</string>
    <string name="add_purchase">Add Purchase</string>
    <string name="pur_title">Purchase date</string>
    <string name="supplier">Supplier</string>
    <string name="s_name">Supplier Mobile</string>
    <string name="s_invoice">Supplier Invoice No.</string>
    <string name="sites">Sites</string>
    <string name="item">Item</string>
    <string name="item_type">Item Type</string>
    <string name="s_qty">Quantity</string>
    <string name="rate">Rate</string>
    <string name="choose">Choose from calender.</string>
    <string name="attendence">Attendance Report</string>
    <string name="expense_title">Expense Name :</string>
    <string name="bill_date">Date</string>
    <string name="bill_no">Bill No.</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="add_exp">Add Expense Details</string>
    <string name="amt">Amount</string>
    <string name="save">Save</string>
    <string name="add">ADD</string>
    <string name="Particulars">Remarks(optional)</string>
    <string name="click_type">Click or type</string>
    <string name="add_name">Add name</string>
    <string name="add_bill">Add bill no.</string>
    <string name="y_name">Your name</string>
    <string name="part_ex">Additinal info.</string>
    <string name="total">\u20B9 0.00</string>
    <string name="staff_info">Staff Information</string>
    <string name="capture">Add</string>
    <string name="staff_name">Staff Name :</string>
    <string name="f_staff_name">Father\'s Name :</string>
    <string name="age">Age :</string>
    <string name="sex">Sex :</string>
    <string name="m_text">male</string>
    <string name="f_text">female</string>
    <string name="address">Address :</string>
    <string name="city">City :</string>
    <string name="state">State :</string>
    <string name="mob">Mobile :</string>
    <string name="salary">Salary :</string>
    <string name="desg">Designation :</string>
    <string name="man_power">Man Power</string>
    <string name="join_date">Date of Joining :</string>
    <string name="pf">Company PF No.(optional) :</string>
    <string name="tax">Income Tax No.(optional) :</string>
    <string name="expense_titles">Expenses</string>
    <string name="ex_date">Date</string>
    <string name="expense_list">Total Expenses</string>
    <string name="dates">Date</string>
    <string name="viewattendence">Attendance Report</string>
    <string name="expense_report">Expenses Report</string>
    <string name="email">Email :</string>
    <string name="non_skilled">Non Skilled</string>
    <string name="employee_title">Employee Name :</string>
    <string name="employee">Employee</string>
    <string name="payroll_date">Payroll Period :</string>
    <string name="or">or</string>
    <string name="to">To</string>
    <string name="from">from</string>
    <string name="method">Payment Metod :</string>
    <string name="pay_date">Pay Date :</string>
    <string name="payroll_details">Payroll Details</string>
    <string name="too">to</string>
    <string name="methods">method</string>
    <string name="income">Income</string>
    <string name="deduction">Deductions</string>
    <string name="b_salary">Basic Salary :</string>
    <string name="o_income">Other Income :</string>
    <string name="contribution">Contributions :</string>
    <string name="total_income">Total Income :</string>
    <string name="total_deduction">Total Deduction :</string>
    <string name="net_pay">Net Pay :</string>
    <string name="new_v">New version available</string>
    <string name="update_text">Please, "\n"
        update app to new version
        to continue reposting.</string>
    <string name="cancel">NO,THANKS</string>
    <string name="update">Update</string>
    <string name="no_days">Number Of Days Present :</string>
    <string name="ex_days">Days</string>
    <string name="adv_sal">Advance Salary :</string>
    <string name="count">Count</string>
    <string name="type">type</string>
    <string name="mail_hint">example@gmail.com</string>
    <string name="mail_sub">mail subject</string>
    <string name="mail_msg">enter message</string>
    <string name="discount">Discount (%)</string>
    <string name="gst_rate">GST Rate</string>
    <string name="choose_s">Suppliers</string>
    <string name="choose_t">type</string>
    <string name="uom">UOM</string>
    <string name="set_zero">0.00</string>
    <string name="s_hsn">HSN Code</string>

</resources>
