<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:text="Recipient Email"
        android:layout_width="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="14sp"
        android:hint="@string/mail_hint"
        android:nextFocusDown="@+id/editTextSubject"
        android:id="@+id/editTextEmail" />

    <TextView
        android:text="Subject"
        android:layout_width="wrap_content"
        android:singleLine="true"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/mail_sub"
        android:textSize="14sp"
        android:nextFocusDown="@+id/editTextMessage"
        android:id="@+id/editTextSubject" />

    <TextView
        android:text="Message"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <EditText
        android:lines="4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:singleLine="false"
        android:layout_gravity="top"
        android:gravity="top"
        android:textSize="14sp"
        android:padding="4sp"
        android:hint="@string/mail_msg"
        android:nextFocusDown="@+id/buttonSend"
        android:id="@+id/editTextMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_cursor_cyan"
        android:textColor="#FFFFFF"
        android:id="@+id/buttonSend"
        android:translationZ="6sp"
        android:text="Send"/>

</LinearLayout>