<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.Login">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


        <ImageView
            android:layout_width="80sp"
            android:background="@mipmap/ic_launcher_round"
            android:layout_height="80sp" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/select_button"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:textSize="16sp"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/colorPrimary"
                android:inputType="text"
                android:focusable="true"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:singleLine="true"/>

                <EditText
                    android:textSize="16sp"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:focusable="true"
                    android:layout_margin="10dp"
                    android:focusableInTouchMode="true"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:background="@drawable/ic_launcher_background"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="#fff"
                android:textSize="16dp"
                android:textStyle="bold"/>

        </LinearLayout>
</LinearLayout>